<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="379dp"
        android:layout_height="650dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp">

        <LinearLayout
            android:id="@+id/internalLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/grid_layout_title"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="730dp"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp">

        <Button
            android:id="@+id/editGoalWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#3F51B5"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/change_goal" />

        <Button
            android:id="@+id/deleteSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF0000"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:minWidth="100dp"
            android:text="@string/delete_row" />

        <Button
            android:id="@+id/recordNewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:insetLeft="10dp"
            android:insetRight="7dp"
            android:onClick="recordNewWeight"
            android:text="@string/record_weight" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>